--- a/pluginTemp/index.html
+++ b/pluginTemp/index.html
@@ -13,7 +13,7 @@
         margin: 0;
       }
     </style>
-    <script type="module" crossorigin="" src="./js/app.WaZ9wpHF.js"></script>
+    <script type="module" crossorigin="" src="./js/app.7WpHVVIT.js"></script>
   </head>
   <body>
     <div id="app"></div>
